updating dynect and receiver

--- a/conf/alert-dynect.yaml
+++ b/conf/alert-dynect.yaml
@@ -1,5 +1,5 @@
 # Dynect Config
-customer_name: customer_name
-user_name: username
-password: password
+customer_name: theguardian
+user_name: websys
+password: Nas2Greast
 repeats: 10
